<resources>
    <string name="app_name">Sate7Map</string>
    <string name="map_add_fence">Add fence</string>
    <string name="map_query_fence">Fecne list</string>
    <string name="map_record_track">Track list</string>
    <string name="map_query_track">Track list</string>
    <string name="open_gps_title">Open GPS？</string>
    <string name="open_gps_message">We need to open GPS.</string>
    <string name="create_circle_fence_hint">Click map to get the center of circle fence.</string>
    <string name="create_polygon_fence_hint">Click the map %d times to get the coordinates of polygon.</string>
    <string name="not_show_no_longer">Don\'t show it again.</string>
    <string name="delete_fence_title">Are you sure to delete fence: %s ?</string>
    <string name="delete_track_title">Delete or remove track: %s ?</string>
    <string name="sure">Sure</string>
    <string name="net_error">Network is unavailable</string>
    <string name="download_ok">Download completed</string>
    <string name="cancel">Cancel</string>
    <string name="hide">Hide</string>
    <string name="remove">Remove(Permanently)</string>
    <string name="fence_type_error">Fence type nonsupport</string>
    <string name="fence_type_error_exist">Fence name has exist</string>
    <string name="monitor_type_error">Monitor type error</string>
    <string name="fence_name_hint">Fence name</string>
    <string name="fence_name_error">Fence is prerequisite\n</string>
    <string name="fence_name_empty_error">Name must not be empty</string>
    <string name="fence_name_exist_error">Name has exist</string>
    <string name="fence_radius_error">Fence radio is prerequisite\n</string>
    <string name="fence_monitor_error">Monitor started time must early than end time</string>
    <string name="fence_mode">Monitor mode</string>
    <string name="fence_mode_in">In</string>
    <string name="fence_mode_out">Out</string>
    <string name="fence_mode_in_out">In &amp; out</string>
    <string name="fence_mode_time_start">Monitor start:10 o\'clock</string>
    <string name="fence_mode_time_start_format">Monitor start:%02d:%02d </string>
    <string name="fence_mode_time_end">Monitor end:22 o\'clock</string>
    <string name="fence_mode_time_end_format">Monitor end:%02d:%02d </string>
    <string name="fence_shape">Create</string>
    <string name="fence_circle">Circle</string>
    <string name="fence_self">Self</string>
    <string name="fence_circle_radius">Fence radio(meter)</string>
    <string name="fence_polygon">Polygon</string>
    <string name="fence_polygon_hint">Polygon vertex(max ten)</string>
    <string name="title_activity_fence_list">FenceListActivity</string>
    <string name="describe_circle">Circle fence radio %d meters</string>
    <string name="describe_polygon">%d polygon</string>
    <string name="down_progress">%s:%d</string>
    <string name="start_download">Start download:%s</string>
    <string name="track_title">Track</string>
    <string name="track_message">This will record the track and show it on map</string>
    <string name="track_name_hint">Name</string>
    <string name="track_save_title">Save track</string>
    <string name="track_name_exists">Name exist,change another one</string>
    <string name="track_info_less">Track message is too little</string>
    <string name="offline_city_list">City list</string>
    <string name="offline_down_list">Dowload manage</string>
    <string name="down_select">Dowload all</string>
    <string name="in">Access fence:%s</string>
    <string name="out">Exit fence:%s</string>
    <string name="into_fence_tick">You has into %s fence</string>
    <string name="out_fence_tick">You has exit %s fence</string>
    <string name="into_fence_title">Access fence</string>
    <string name="out_fence_title">Exit fence</string>
    <string name="into_fence_content">You has into %s fence</string>
    <string name="out_fence_content">You has exit %s fence</string>
    <string name="title_create_fence">Create new fence</string>
    <string name="title_edite_fence">Edit fence info</string>
    <string name="title_fence_list">Fence history</string>
    <string name="title_list_track">Track history</string>
    <string name="title_offline_map">Manage offline map</string>
    <string name="input_longlat_self">Manually input coordinates</string>
    <string name="input_longlat_empty">Latitude and longitude cannot be empty</string>
    <string name="input_longlat_title">Latitude and longitude</string>
    <string name="hint_circle_long">Longitude of fence center</string>
    <string name="hint_circle_lat">Latitude of fence center</string>
    <string name="hint_polygon_long1">V1 longitude</string>
    <string name="hint_polygon_lat1">V1 latitude</string>
    <string name="hint_polygon_long2">V2 longitude</string>
    <string name="hint_polygon_lat2">V2 latitude</string>
    <string name="hint_polygon_long3">V3 longitude</string>
    <string name="hint_polygon_lat3">V3 latitude</string>
    <string name="hint_polygon_long4">V4 longitude</string>
    <string name="hint_polygon_lat4">V4 latitude</string>
    <string name="hint_polygon_long5">V5 longitude</string>
    <string name="hint_polygon_lat5">V5 latitude</string>
    <string name="hint_polygon_long6">V6 longitude</string>
    <string name="hint_polygon_lat6">V6 latitude</string>
    <string name="hint_polygon_long7">V7 longitude</string>
    <string name="hint_polygon_lat7">V7 latitude</string>
    <string name="hint_polygon_long8">V8 longitude</string>
    <string name="hint_polygon_lat8">V8 latitude</string>
    <string name="hint_polygon_long9">V9 longitude</string>
    <string name="hint_polygon_lat9">V9 latitude</string>
    <string name="hint_polygon_long10">V10 longitude</string>
    <string name="hint_polygon_lat10">V10 latitude</string>
    <string name="track_settings">Track settings</string>
    <string name="track_settings_title">Frequency settings(seconds)</string>
    <string name="track_settings_summery_default">Save point per 3 seconds.</string>
    <string name="track_settings_summery">Save point per %d seconds.</string>
    <string name="start_no_network">Network is not available</string>
    <string name="start_no_wifi">Wifi not connected,will use the data and may incur certain costs,continue?</string>
    <string name="map_download">Map download</string>
    <string name="left_drag">Try left swap</string>
    <string name="notify_type">Notify type:%s</string>
    <string name="notify_start_time">Start time:%s</string>
    <string name="notify_end_time">End time:%s</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="valid_time">%2d:%2d—%2d:%2d</string>
    <string name="create_fence">Create fence</string>
    <string name="create_fence_on">Wait for Confirm</string>
    <string name="create_fence_off">Create directly</string>
    <string name="create_fence_title">Whether the creation of the fence requires final confirmation?</string>
    <string name="create_fence_message">Fence position confirmed,sure create?</string>
</resources>
