<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/self_circleLong"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="numberDecimal"
        android:text="113.86505623882806"
        android:hint="@string/hint_circle_long" />

    <EditText
        android:id="@+id/self_circleLat"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="numberDecimal"
        android:text="22.587350742760236"
        android:layout_height="50dp"
        android:hint="@string/hint_circle_lat" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:text="50"
        android:inputType="numberDecimal"
        android:hint="@string/fence_circle_radius" />
</LinearLayout>